package eapli.base.domain.persistence;

import eapli.base.domain.model.customer.Customer;
import eapli.base.domain.model.customer.VATiD;
import eapli.framework.domain.repositories.DomainRepository;

public interface CustomerRepository extends  DomainRepository<Long, Customer> {

    Iterable<Customer> findCustomerByVATiD(VATiD vatId);
}

