@startuml
skinparam classAttributeIconSize 0


Package Presentation{
class CheckOrderStatusUI {
+doShow();
}
}

Package Application{
class CheckOrderStatusController {
  +checkOrderStatus()
}
}


Package Domain{
class Customer {
findCustomerByVATiD(VATiD vatId)
}

}

Package Persistence{

class RepositoryFactory{
}

class CustomerRepository{
  +findCustomerByVATiD(VATiD vatId)
}

class OrderRepository{
  +findOrderByCustomer(VATiD vatId)
}

}



CheckOrderStatusUI ..> CheckOrderStatusController
CheckOrderStatusController ..> Customer
CheckOrderStatusController ..> RepositoryFactory
CheckOrderStatusController ..> CustomerRepository
RepositoryFactory ..|> CustomerRepository
CustomerRepository ..|> Customer
CustomerRepository ..|> OrderRepository




@enduml